# FromScratch

./: .coverage  .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml
.github/workflow/: docs.yml
.github/workflows/: ci.yml  test.yml
app/: main.py  moncsv.csv
app/modules/: mon_module.py
docs/source/: app.modules.rst  app.rst  conf.py  index.rst  mon_api.rst
public/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree
public/_sources/: index.rst.txt
public/_static/: documentation_options.js
tests/: test_math_csv.py
